--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,7 @@
 <li>
     {{burger_name}}
     <button class="update-devoured" data-id="{{id}}" data-devoured="{{devoured}}">
-        {{#if devoured}}Yum!{{else}}Eat Me{{/if}}
+        {{!-- {{#if devoured}}Yum!{{else}}Eat Me{{/if}} --}}
+        Eat ME
     </button>
 </li>
