--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<title>BurgerMeister</title>
+		<title>Burger-Meister</title>
 	</head>
 	<body>
 		{{{ body }}}
