--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,9 @@
 </head>
 
 <body>
+	<div class="container-fluid">
 	{{{ body }}}
+	</div>
 	<script src="/assets/js/burger_script.js"></script>
 </body>
 
