--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,8 @@
 <li>
-    {{burger_name}}
-    <button class="update-devoured" data-id="{{id}}" data-devoured="{{devoured}}">
+    
+    <button class="update-devoured btn btn-warning" data-id="{{id}}" data-devoured="{{devoured}}">
         {{!-- {{#if devoured}}Yum!{{else}}Eat Me{{/if}} --}}
-        Eat ME
+        Devour
     </button>
+    {{burger_name}}
 </li>
