--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,6 @@
 <li>
     
-    <button class="update-devoured btn btn-warning" data-id="{{id}}" data-devoured="{{devoured}}">
+    <button class="update-devoured btn btn-outline-success" data-id="{{id}}" data-devoured="{{devoured}}">
         {{!-- {{#if devoured}}Yum!{{else}}Eat Me{{/if}} --}}
         Devour
     </button>
