--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,8 +20,15 @@
 </head>
 
 <body>
+
+	<h1 class="sticky-top" id="heading">
+		<img src="./assets/images/burgerman.png" alt="">
+		BURGER MEISTER
+		<small class="text-muted">[ˈbɜrgər] [ˈmaɪstər]</small>
+	</h1>
+
 	<div class="container-fluid">
-	{{{ body }}}
+		{{{ body }}}
 	</div>
 	<script src="/assets/js/burger_script.js"></script>
 </body>
