--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -10,6 +10,17 @@ h1 {
     padding-top: 5%;
     padding-bottom: 5%;
     background-color: #DAF7A6;
+    width: 100%;
+}
+
+h2 {
+    color: rgb(50, 51, 47);
+}
+
+#devoured-div {
+    border-color: #F4AA47;
+    border-style: solid;
+    border-width: 5px;
 }
 
 .devoured-list {
@@ -17,6 +28,10 @@ h1 {
     text-decoration-color: #C70039;
     padding: 2%;
     margin-right: 10%;
+}
+
+#wish-div {
+    background-color: #F4AA47;
 }
 
 .wish-list {
@@ -38,4 +53,18 @@ li {
 
 .wishAndDevourSection {
     padding: 2%;
+    padding-top: 0;
+}
+
+img {
+    width: 200px;
+    height: 150px
+}
+
+/* /* .btn {
+    margin-left: 5px;
+} */
+
+#button-div {
+    margin: 0;
 }
